--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,16 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.2",
+    "@sanity/client": "^7.12.0",
+    "@sanity/image-url": "^1.2.0",
     "next": "^16.0.1",
+    "next-sanity": "^11.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
