--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
+    "@sanity/cli": "^4.12.0",
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
